--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Ec<img src="Images/recycle.jpg">Track</h1>
+        <h1 class="title">Ec<img src="recycle.png" sizes="50px">Track</h1>
             <p class="subtitle">Dispose Smart, Go Green - Your E-Waste Solution!</p>
         <div class="login-page">
             <div class="form-container">
-                <h2>Enter your number to continue</h2>
+                <h2>Please enter login details to continue</h2>
                 <form id="login-form">
                     <input type="email" id="login-email" name="email" placeholder="Gmail ID:" required>
                     <input type="password" id="login-password" name="password" placeholder="Password:" required>
-                    <button type="submit">WELCOME BACK</button>
+                    <button type="submit">Sign in</button>
                     <p>Don't have an account? <a href="#signup" id="signup-link">Sign up</a></p>
                 </form>
             </div>
